Add Ukrainian localisation 🇺🇦

--- a/Mask Tracker/en.lproj/Localizable.strings
+++ b/Mask Tracker/en.lproj/Localizable.strings
@@ -9,19 +9,22 @@
 "list.masks" = "Your masks";
 "newMaskCard.title" = "Create new mask";
 "newMaskCard.description" = "Have another one?";
+"newMaskCard.descriptionZero" = "";
 "title.addMask" = "Add mask";
 "newMask.maskNameLabel" = "Name your mask";
 "newMask.maskNamePlaceholder" = "Brand new mask";
 "newMask.random" = "Randomize";
 "newMask.pickType" = "Pick the mask type";
-"newMask.typeDescription" = "Depends on the mask type we'll set the critical amount of time in which you should change it";
-"newMask.recomendedTime" = "Рекомендованное время использования";
-"Pick the mask type" = "Pick the mask type";
-"Mask Type" = "Mask Type";
-"Recomended time of use" = "Recomended time of use";
+"newMask.typeDescription" = "Depending on the mask type we'll set the critical amount of time in which you should change it";
+"Medical" = "Medical";
+"Fabric" = "Fabric";
+"FFP2" = "FFP2";
+"FFP3" = "FFP3";
+"Custom" = "Custom";
+"newMask.recomendedTime" = "Recomended time of use";
 "newMask.time" = "%d hours";
 "newMask.add" = "Add";
-"mask.used" = "Mask is being used:";
+"mask.used" = "Mask is being used";
 "mask.left" = "Time left to use";
 "mask.times" = "Used times";
 "mask.stop" = "Stop";
@@ -32,5 +35,5 @@
 "mask.info.description" = "Don't use the mask more than the recomended time. Change filter or the mask frequently to keep yourself safe.\n\nUse reset button in the top if you want to reset the counter. It will mean that you have changed the filter or took the new mask of the same type.";
 "notification.title" = "That's time for change!";
 "notification.body" = "Change the mask or appropriate filter";
-"widget.title" = "";
-"widget.description" = "";
+"widget.title" = "Mask Tracker Widget";
+"widget.description" = "This widget shows the percent of time your face mask being used";
