--- a/Mask Tracker/ru.lproj/Localizable.strings
+++ b/Mask Tracker/ru.lproj/Localizable.strings
@@ -33,6 +33,8 @@
 "mask.alert.description" = "Пришло время сменить маску или фильтр. Сбросьте таймер используя кнопку вверху экрана как только сделаете это.";
 "mask.info.title" = "Позаботьтесь о себе!";
 "mask.info.description" = "Не используйте маску дольше рекомендуемого времени, меняте фильтр или маску вовремя.\n\nИспользуйте кнопку вверху экрана для сброса таймера как только вы заменили маску или фильтр.";
+"mask.reset" = "Сбросить таймер";
+"mask.delete" = "Удалить маску";
 "notification.title" = "Время что-то менять!";
 "notification.body" = "Замените маску или соответствующий фильтр";
 "widget.title" = "Mask Tracker Виджет";
