--- a/Mask Tracker/uk.lproj/Localizable.strings
+++ b/Mask Tracker/uk.lproj/Localizable.strings
@@ -34,6 +34,8 @@
 "mask.alert.description" = "Настав час змінити фільтр або взяти нову маску. Після цього скиньте таймер кнопкою зверху.";
 "mask.info.title" = "Подбайте про себе!";
 "mask.info.description" = "Не використовуйте маску довше рекомендованого часу. Змінюйте фільтр або маску регулярно, щоб залишатися у безпеці.\n\nВикористовуйте кнопку зверху щоб оновити таймер. Це означатиме, що ви змінили фільтр або взяли нову маску такого ж типу.";
+"mask.reset" = "Оновити таймер";
+"mask.delete" = "Видалити маску";
 "notification.title" = "Настав час змін!";
 "notification.body" = "Змініть маску або фільтр";
 "widget.title" = "Mask Tracker Віджет";
