feat: Add missing locales

--- a/Mask Tracker/en.lproj/Localizable.strings
+++ b/Mask Tracker/en.lproj/Localizable.strings
@@ -35,7 +35,24 @@
 "mask.info.description" = "Don't use the mask more than the recomended time. Change filter or the mask frequently to keep yourself safe.\n\nUse reset button in the top if you want to reset the counter. It will mean that you have changed the filter or took the new mask of the same type.";
 "mask.reset" = "Reset the counter";
 "mask.delete" = "Delete the mask";
+"mask.deleteAlert.title" = "Delete the mask";
+"mask.deleteAlert.description" = "You are about to delete the mask";
+"mask.deleteAlert.cancel" = "Cancel";
+"mask.deleteAlert.confirm" = "Delete";
+"mask.resetAlert.title" = "Reset the timer";
+"mask.resetAlert.description" = "You are about to reset the mask timer. This shall be done once you have taken the new mask or the new filter";
+"mask.resetAlert.cancel" = "Cancel";
+"mask.resetAlert.confirm" = "Reset";
 "notification.title" = "That's time for change!";
 "notification.body" = "Change the mask or appropriate filter";
 "widget.title" = "Mask Tracker Widget";
 "widget.description" = "This widget shows the percent of time your face mask being used";
+"welcome.continue" = "Continue";
+"welcome.welcome" = "Welcome to";
+"welcome.mainTitle" = "Mask Tracker";
+"welcome.title1" = "Stay safe";
+"welcome.description1" = "Wearing the same mask for a long time may cause a health problems. So let's track it and change the mask on time.";
+"welcome.title2" = "Simple, just like breathing";
+"welcome.description2" = "Reset the counter when you change the filter or take the new mask.";
+"welcome.title3" = "All synchornized";
+"welcome.description3" = "We use iCloud to synchronize between your iOS devices.";
