--- a/Mask Tracker/ru.lproj/Localizable.strings
+++ b/Mask Tracker/ru.lproj/Localizable.strings
@@ -35,7 +35,24 @@
 "mask.info.description" = "Не используйте маску дольше рекомендуемого времени, меняте фильтр или маску вовремя.\n\nИспользуйте кнопку вверху экрана для сброса таймера как только вы заменили маску или фильтр.";
 "mask.reset" = "Сбросить таймер";
 "mask.delete" = "Удалить маску";
+"mask.deleteAlert.title" = "Удалить маску";
+"mask.deleteAlert.description" = "Вы собираеетесь удалить маску";
+"mask.deleteAlert.cancel" = "Отменить";
+"mask.deleteAlert.confirm" = "Удалить";
+"mask.resetAlert.title" = "Сбросить таймер";
+"mask.resetAlert.description" = "Вы собираетесь сбросить таймер. Это требуется, когда вы взяли новую маску или поменяли фильтр";
+"mask.resetAlert.cancel" = "Отменить";
+"mask.resetAlert.confirm" = "Сбросить";
 "notification.title" = "Время что-то менять!";
 "notification.body" = "Замените маску или соответствующий фильтр";
 "widget.title" = "Mask Tracker Виджет";
 "widget.description" = "Этот виджет показывает сколько процеетов времени использовалась маска";
+"welcome.continue" = "Продолжить";
+"welcome.welcome" = "Встречайте";
+"welcome.mainTitle" = "Mask Tracker";
+"welcome.title1" = "Берегите себя";
+"welcome.description1" = "Маска начинает вредить здоровью, если её носить дольше рекомендуемого времени. Мы поможем вам следить за этим и менять маску вовремя.";
+"welcome.title2" = "Это просто, как дышать";
+"welcome.description2" = "Сбросьте таймер, если вы взяли новую маску или поменяли фильтр.";
+"welcome.title3" = "Всё синхронизировано";
+"welcome.description3" = "Мы используем iCloud, чтобы хранить маски, которые вы создали.";
