--- a/Mask Tracker/uk.lproj/Localizable.strings
+++ b/Mask Tracker/uk.lproj/Localizable.strings
@@ -36,7 +36,24 @@
 "mask.info.description" = "Не використовуйте маску довше рекомендованого часу. Змінюйте фільтр або маску регулярно, щоб залишатися у безпеці.\n\nВикористовуйте кнопку зверху щоб оновити таймер. Це означатиме, що ви змінили фільтр або взяли нову маску такого ж типу.";
 "mask.reset" = "Оновити таймер";
 "mask.delete" = "Видалити маску";
+"mask.deleteAlert.title" = "Delete the mask";
+"mask.deleteAlert.description" = "You are about to delete the mask";
+"mask.deleteAlert.cancel" = "Cancel";
+"mask.deleteAlert.confirm" = "Delete";
+"mask.resetAlert.title" = "Reset the timer";
+"mask.resetAlert.description" = "You are about to reset the mask timer. This shall be done once you have taken the new mask or the new filter";
+"mask.resetAlert.cancel" = "Cancel";
+"mask.resetAlert.confirm" = "Reset";
 "notification.title" = "Настав час змін!";
 "notification.body" = "Змініть маску або фільтр";
 "widget.title" = "Mask Tracker Віджет";
 "widget.description" = "Цей віджет показує, скільки запасу маски використано";
+"welcome.continue" = "Продовжити";
+"welcome.welcome" = "Вітаємо в";
+"welcome.mainTitle" = "Mask Tracker";
+"welcome.title1" = "Бережіть себе";
+"welcome.description1" = "Маска починає шкодити, а не захищати, якщо носити її довше рекомендованого часу. Ми допоможемо вам слідкувати за цим та змінювати маску вчасно.";
+"welcome.title2" = "Це просто, як дихати";
+"welcome.description2" = "Оновлюйте таймер, коли ви замінили фільтр чи взяли нову маску.";
+"welcome.title3" = "Усе синхронізовано";
+"welcome.description3" = "Ми використовуємо iCloud, щоб зберігати ващі масочки.";
